ansible/roles/minikube/files/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-challenge-deployment
  labels:
    app: sre-challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-challenge
  template:
    metadata:
      labels:
        app: sre-challenge
    spec:
      containers:
      - name: sre-challenge
        image: sre-challenge:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
