ansible/roles/minikube/files/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sre-challenge-ingress

spec:
  rules:
    - host: sre-challenge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-challenge-service
                port:
                  number: 80
